--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,14 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mdp_cw3">
         <activity
-            android:name=".MainActivity"
+            android:name=".views.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -24,6 +24,6 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.RunnerService" android:enabled="true" android:exported="false"/>
+        <service android:name=".services.location.RunnerService" android:enabled="true" android:exported="false"/>
     </application>
 </manifest>
