--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dannyweston.mdp_cw3">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="false"
@@ -13,6 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mdp_cw3">
+        <activity
+            android:name=".views.RunOverviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.HistoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.RunningActivity"
+            android:exported="false" />
         <activity
             android:name=".views.MainActivity"
             android:exported="true"
@@ -24,6 +36,10 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.location.RunnerService" android:enabled="true" android:exported="false"/>
+        <service
+            android:name=".services.location.RunnerService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
+
 </manifest>
