--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mdp_cw3">
         <activity
+            android:name=".views.AboutActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.RunOverviewActivity"
             android:exported="false" />
         <activity
@@ -27,8 +30,7 @@
             android:exported="false" />
         <activity
             android:name=".views.MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,7 +39,7 @@
         </activity>
 
         <service
-            android:name=".services.location.RunnerService"
+            android:name=".services.RunnerService"
             android:enabled="true"
             android:exported="false" />
     </application>
